Fix issue with agent modal on mobile. (Line going through screen because of text overflowing container).

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -340,9 +340,8 @@
       .content {
         background-color: white;
         width: 100%;
-        height: 100%;
         margin: 0;
-        box-shadow: 0px 0px 2em gainsboro;
+        box-shadow: none;
         .header {
           margin-bottom: 5%;
           .bio-pic {
